Fix overflow issue, enabling scroling
Disabling 100ovh, adding header div, adding overflow-y

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        
         font-family: "VT323", monospace;
         font-size: 16px;
         color: #00ff00;
@@ -13,6 +13,13 @@ body {
         -webkit-font-smoothing: none;
         -moz-osx-font-smoothing: grayscale;
       }
+
+      html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* prevent horizontal scroll */
+  overflow-y: auto;   /* allow vertical scroll */
+}
 
       body::after {
         content: "";
@@ -60,6 +67,7 @@ body {
         text-align: center;
         font-size: 28px;
         margin-bottom: 10px;
+       
       }
 
       .line {
@@ -331,11 +339,13 @@ body {
     gap: 20px;
     margin-left: 0;
     justify-content: center;
+    font-size: 10px;
   }
 
   .icon-container a img {
-    width: 50px;
-    height: 50px;
+    width: 25px;
+    height: 25px;
+    
   }
 
   .container,
@@ -343,6 +353,7 @@ body {
     width: 95%;
     margin: 10px auto;
     padding: 10px;
+    font-size: 10px;
   }
 
   .terminal {
@@ -364,8 +375,8 @@ body {
   }
 
   #testConsole {
-    width: 20%;
-    height: 150px;
+    width: 30%;
+    height: 250px;
     bottom: 20%;
     right: 5%;
     font-size: 8px;
@@ -374,6 +385,7 @@ body {
 
   #tools {
     margin: 20px auto;
+    font-size: 10px;
   }
 
   .tool-grid {
@@ -385,8 +397,8 @@ body {
   }
 
   .tool img {
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
   }
 
 
@@ -399,5 +411,22 @@ body {
   #userInput {
     font-size: 14px;
     height: 40px;
+  }
+}
+
+@media (max-height: 800px) {
+  .site-header {
+    flex-direction: column;
+    padding: 0.5rem;
+    font-size: 8px;
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .logo {
+    max-height: 80px;
+    object-fit: contain;
   }
 }
